# pgpartition

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
conf/: conf.yaml.example
data/: partitioning_template.jinja2  sample_per_week.sql
src/pgpartition/: main.py
src/pgpartition/helpers/: enums.py  util.py
src/pgpartition/models/: base.py  config.py  exec_partitioning.py  index.py  partition.py  partition_condition.py  partitioned_table.py  partitioner.py  table.py  time_period.py
