[metadata]
name = pgpartition
version = 0.0.1
author = Maria Karanasou
author_email = karanasou@gmail.com
description = Generates code to create Postgres data partitions of a table
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mkaranasou/pgpartition
project_urls =
    Bug Tracker = https://github.com/mkaranasou/pgpartition/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src